fixed gap between tags on recipe page

--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -142,7 +142,6 @@
     display: block;
     text-decoration: none;
     padding: 0.2vh;
-    margin: 0.1vh;
     border-radius: 0.5vh;
     white-space: nowrap;
     box-sizing: border-box;
